# mac_egg

./: .gitignore  Cargo.toml  README.md  README_zh.md
extraction-gym/: .gitignore  Cargo.toml
extraction-gym/src/: lib.rs
src/: analyzer.rs  egraph_roots.rs  extractor.rs  language.rs  lib.rs  main.rs  mining.rs  netlist.rs  rule.rs  test.rs
src/io/: aiger.rs  bench.rs  liberty.rs  mod.rs  stdcell.rs  verilog.rs
test/: 6t_comm_rules.json  6t_dmg_rules.json  6t_inv_rules.json  add1.aag  add2.aag  add2.bench  add2_map_abc.v  aig_rules.json  asap7sc6t_SELECT_LVT_TT_nldm.lib  mul4_map_abc.v  mul4_map_genus.v
