[package]
name = "mac_egg"
version = "0.1.0"
edition = "2024"

[dependencies]
egraph-serialize = { version = "0.1.0", features = ["graphviz"] }
egg = { version = "0.10.0", features = ["serde-1"] }
extraction-gym = { path = "extraction-gym"}
indexmap = "2.10.0"
anyhow = "1.0.98"
rustc-hash = "1.1.0"
aiger = "0.2.0"
petgraph = "0.8.2"
nom = "8.0.0"
libertyparse = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
derivative = "2.2.0"
itertools = "0.14.0"
clap = { version = "4.5.49", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.8"
log = "0.4.28"

